feat: translate website in english

--- a/resume/index.html
+++ b/resume/index.html
@@ -67,6 +67,7 @@
         Remote worker 10 years+ 🏡💻 <br />
         <a href="mailto:fabien.furet@gmail.com">fabien.furet@gmail.com</a> //
         +33687321068<br />
+        <a href="https://fabienfuret.net">Website</a> -
         <a href="https://github.com/RETFU">Github</a> -
         <a href="https://twitter.com/RETFU">Twitter</a>
       </div>
