--- a/index.html
+++ b/index.html
@@ -22,75 +22,76 @@
         <span itemprop="name">Fabien Furet</span>
         <span class="aka">aka RETFU</span>
       </h1>
-      <h2>Développeur web 🚀</h2>
-      <p class="intro">
-        Cela fait plus de 15 ans que j'évolue dans le milieu du web en backend
-        et frontend. <br />
-        Je suis CTO chez <a href="http://iwd.io">IWD</a> et j'aide l'équipe dev
-        à produire des livrables de qualités, maintenable et dans les temps.
-      </p>
+      <h2>Skills 🚀</h2>
       <p>
-        <span class="tag tag-level-5">html5</span>
-        <span class="tag tag-level-3">redux</span>
         <span class="tag tag-level-4">leadership</span>
-        <span class="tag tag-level-4">raml</span>
-        <span class="tag tag-level-2">nginx</span>
-        <span class="tag tag-level-5">as3</span>
-        <span class="tag tag-level-2">cordova</span>
-        <span class="tag tag-level-4">fms</span>
-        <span class="tag tag-level-5">json schema</span>
-        <span class="tag tag-level-5">continuous delivery</span>
-        <span class="tag tag-level-5">css</span>
-        <span class="tag tag-level-3">webpack</span>
-        <span class="tag tag-level-5">unit test</span>
-        <span class="tag tag-level-5">api rest</span>
-        <span class="tag tag-level-5">continuous integration</span>
-        <span class="tag tag-level-4">mysql</span>
-        <span class="tag tag-level-3">yarn</span>
-        <span class="tag tag-level-5">maintainability</span>
-        <span class="tag tag-level-5">loose coupling</span>
-        <span class="tag tag-level-5">php</span>
-        <span class="tag tag-level-3">nodejs</span>
-        <span class="tag tag-level-5">solid</span>
-        <span class="tag tag-level-4">management</span>
-        <span class="tag tag-level-2">couchdb</span>
-        <span class="tag tag-level-5">dependency injection</span>
-        <span class="tag tag-level-4">composer</span>
-        <span class="tag tag-level-4">reactjs</span>
-        <span class="tag tag-level-2">python</span>
-        <span class="tag tag-level-4">indexeddb</span>
-        <span class="tag tag-level-4">consistency</span>
-        <span class="tag tag-level-5">interface</span>
-        <span class="tag tag-level-4">apache</span>
-        <span class="tag tag-level-2">jenkins</span>
-        <span class="tag tag-level-1">nagios</span>
-        <span class="tag tag-level-3">service worker</span>
-        <span class="tag tag-level-2">gitlab</span>
-        <span class="tag tag-level-5">http</span>
-        <span class="tag tag-level-5">contract</span>
-        <span class="tag tag-level-4">saas</span>
         <span class="tag tag-level-3">redis</span>
-        <span class="tag tag-level-5">javascript</span>
-        <span class="tag tag-level-5">mentoring</span>
-        <span class="tag tag-level-2">pouchdb</span>
+        <span class="tag tag-level-5">json schema</span>
+        <span class="tag tag-level-5">maintainability</span>
+        <span class="tag tag-level-3">android studio</span>
+        <span class="tag tag-level-4">apache</span>
+        <span class="tag tag-level-5">hiring</span>
+        <span class="tag tag-level-4">node</span>
+        <span class="tag tag-level-3">webpack</span>
+        <span class="tag tag-level-5">react</span>
+        <span class="tag tag-level-2">docker</span>
+        <span class="tag tag-level-4">consistency</span>
+        <span class="tag tag-level-5">react native</span>
+        <span class="tag tag-level-5">as3</span>
+        <span class="tag tag-level-4">saas</span>
+        <span class="tag tag-level-4">openapi</span>
+        <span class="tag tag-level-5">html5</span>
+        <span class="tag tag-level-4">react testing library</span>
+        <span class="tag tag-level-3">nginx</span>
+        <span class="tag tag-level-5">unit test</span>
+        <span class="tag tag-level-1">serverless</span>
+        <span class="tag tag-level-5">rest api</span>
+        <span class="tag tag-level-3">cocoapods</span>
+        <span class="tag tag-level-4">saml sso</span>
+        <span class="tag tag-level-5">dependency injection</span>
+        <span class="tag tag-level-4">raml</span>
+        <span class="tag tag-level-5">detox</span>
+        <span class="tag tag-level-3">xcode</span>
+        <span class="tag tag-level-5">solid</span>
+        <span class="tag tag-level-5">interface</span>
+        <span class="tag tag-level-5">jest</span>
+        <span class="tag tag-level-5">redux</span>
+        <span class="tag tag-level-5">contract</span>
+        <span class="tag tag-level-5">css</span>
+        <span class="tag tag-level-3">gradle</span>
+        <span class="tag tag-level-4">mysql</span>
+        <span class="tag tag-level-4">typescript</span>
+        <span class="tag tag-level-2">python</span>
+        <span class="tag tag-level-5">http</span>
+        <span class="tag tag-level-5">loose coupling</span>
+        <span class="tag tag-level-5">continuous integration</span>
         <span class="tag tag-level-5">code review</span>
+        <span class="tag tag-level-4">management</span>
+        <span class="tag tag-level-5">mentoring</span>
+        <span class="tag tag-level-4">firebase platform</span>
+        <span class="tag tag-level-4">composer</span>
+        <span class="tag tag-level-5">continuous dxelivery</span>
+        <span class="tag tag-level-5">php</span>
+        <span class="tag tag-level-5">javascript</span>
+        <span class="tag tag-level-4">gitlab ci</span>
+        <span class="tag tag-level-2">service worker</span>
       </p>
       <br />
       <h2>Talk</h2>
       <p>
-        <strong>Recruter vos développeurs</strong> (2018)
+        <strong>Hire your developers</strong> (2018)
         <a href="http://fabienfuret.net/talk/Recruter-vos-developpeurs"
           >slides</a
         ><br />
-        Retour d'expérience après 10 ans de recrutements dans mes équipes.
+        10 years feedbacks
         <br /><br />
         <strong>REST in peace</strong> (2015)
         <a href="http://fabienfuret.net/talk/REST-in-peace">slides</a><br />
-        Bonnes pratiques pour construire une API "REST" pragmatique et efficace.
+        Best practices to build a pragmatic and efficient REST API
         <br /><br />
         <strong>Standing desk WTF?</strong> (2014)
         <a href="http://fabienfuret.net/talk/Standing-desk-WTF">slides</a><br />
-        Lighting talk sur mon retour d'expérience après 3 mois de standing desk.
+        Feedback after 3 months
       </p>
       <p class="links">
         <a href="/books">Livres</a> -
