feat: add libraries to the resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -123,21 +123,17 @@
         🚀 Help scale the company from 3 to 120 people, 3 to thousands users, 0
         to 10M$+ revenue, 0 to 7 offices across the globe<br />
         💰 Help raise funding with
-        <a
-          href="https://bit.ly/3oibWj5"
-          >Ardian</a
-        >
+        <a href="https://bit.ly/3oibWj5">Ardian</a>
         in 2018<br />
         💰 Help close deals when tech & automation involved with a prospect<br />
         👨‍🔧 Audit and integrate VR tech team
-        <a href="https://bit.ly/3ElxfWl"
-          >after the buyout</a
-        >, during the covid period 😱<br />
+        <a href="https://bit.ly/3ElxfWl">after the buyout</a>, during the covid
+        period 😱<br />
         💪 <a href="https://github.com/iwonderanddev/jobladder">Build</a>,
         <a href="https://github.com/iwonderanddev/tech-challenges">hire</a> &
         manage a remote tech team of 35+ people based in 🇫🇷 🇷🇴 🇺🇸 🇸🇬<br />
         👌 Quality as core value: code review, unit / integration / e2e testing,
-        continuous delivery<br />
+        robust CI, "one button deploy" mindset<br />
         👨‍💻 Tech team turnover < 6% = autonomous + quality + sustainable rhythm +
         continuous improvement + remote<br />
         👨‍🏫 Mentor the
@@ -150,10 +146,11 @@
         Native & TypeScript for the last 3 years<br /><br />
 
         <strong>Stack</strong><br />
-        - Web: TypeScript + React<br />
-        - Mobile: TypeScript + React Native - Firebase platfoem: Messaging,
-        Firestore, Cloud Function...<br />
-        - 2D editor: TypeScript + React<br />
+        - Web: TypeScript + React (Cypress, Jest, React Testing Labrary, React
+        Query)<br />
+        - Mobile: TypeScript + React Native (Detox, Jest, React Testing Labrary,
+        Redux) - Firebase platform: Messaging, Firestore, Cloud Function..<br />
+        - 2D editor: TypeScript + React + render engine via Canvas<br />
         - 3D editor: C# - Unity SDK<br />
         - Backend: REST API with PHP (Symfony) + MYSQL + REDIS + ELASTICSEARCH
         <br />
