--- a/resume/index.html
+++ b/resume/index.html
@@ -76,7 +76,7 @@
         <br />
         🕵️ Problem solver, takes initiative to identify and solve important
         problems <br />
-        🤝 Business oriented, bridge tech with stakeholder, sales, clients...
+        🤝 Business oriented, I can bridge with stakeholder, sales, clients...
         <br />
         😸 Require minimal direction/oversight <br />
         👊 Very good communication, positive approach, working well within a
@@ -107,7 +107,7 @@
         <h4>CTO & Board member (2006-2021)</h4>
 
         <a href="https://bit.ly/3Ii44pK">IWD</a> provides a SaaS platform that
-        allows <a href="https://bit.ly/3Ifa3M3">clients</a>to manage their
+        allows <a href="https://bit.ly/3Ifa3M3">clients</a> to manage their
         merchandising and in-store execution. <br /><br />
 
         “I wanted to start a project from scratch. I got the chance to meet
@@ -146,11 +146,11 @@
         Native & TypeScript for the last 3 years<br /><br />
 
         <strong>Stack</strong><br />
-        - Web: TypeScript + React (Cypress, Jest, React Testing Labrary, React
+        - Web: TypeScript + React (Cypress, Jest, React Testing Library, React
         Query)<br />
-        - Mobile: TypeScript + React Native (Detox, Jest, React Testing Labrary,
+        - Mobile: TypeScript + React Native (Detox, Jest, React Testing Library,
         Redux) - Firebase platform: Messaging, Firestore, Cloud Function..<br />
-        - 2D editor: TypeScript + React + render engine via Canvas<br />
+        - 2D editor: TypeScript + React + custom render engine via Canvas<br />
         - 3D editor: C# - Unity SDK<br />
         - Backend: REST API with PHP (Symfony) + MYSQL + REDIS + ELASTICSEARCH
         <br />
