feat(book): add Effondrement

--- a/books/index.html
+++ b/books/index.html
@@ -26,14 +26,25 @@
           year: 2021,
           books: [
             {
+              title: 'Effondrement',
+              subtitle: "Comment les sociétés décident de leur disparition ou de leur survie",
+              author: 'Jared Diamond',
+              pages: 656,
+              year: 2006,
+              image: 'cover/effondrement.jpg',
+              tag: 'histoire',
+              rating: 'en cours de lecture',
+              link: 'http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folio-essais/Effondrement',
+            },
+            {
               title: 'Le plan Marshall',
-              subtitle: 'A l\'aube de la guerre froide',
+              subtitle: "A l'aube de la guerre froide",
               author: 'Benn Steil',
               pages: 683,
               year: 2020,
               image: 'cover/le-plan-marshall.jpeg',
               tag: 'histoire',
-              rating: 'en cours de lecture',
+              rating: '📚📚📚📚',
               link: 'https://www.lesbelleslettres.com/livre/4319-le-plan-marshall',
             },
             {
