feat(resume): add opengraph metadata

--- a/resume/index.html
+++ b/resume/index.html
@@ -2,10 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Fabien Furet resume</title>
-    <meta name="description" content="Fabien Furet resume" />
+    <title>Fabien Furet resume 🤓</title>
+    <meta name="description" content="My detailed resume for recruiters" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="noindex, nofollow" />
+    <meta property="og:site_name" content="Fabien Furet" />
+    <meta property="og:title" content="Resume 🤓" />
+    <meta
+      property="og:description"
+      content="My detailed resume for recruiters"
+    />
+    <meta
+      property="og:image"
+      content="https://fabienfuret.net/resume/me.jpeg"
+    />
+    <meta property="og:url" content="https://fabienfuret.net/resume/" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css"
       rel="stylesheet"
