refactor(resume): change the photo

--- a/resume/index.html
+++ b/resume/index.html
@@ -67,7 +67,7 @@
   <body>
     <div class="main">
       <div class="header">
-        <img src="me.jpeg" style="border-radius: 200px; max-width: 250px" />
+        <img src="fab.jpeg" style="border-radius: 200px; max-width: 250px" />
         <h1>Fabien Furet</h1>
         <strong>Quality & performance through simplicity</strong>
         <br /><br /><br />
