fix(resume): better emoji & wording

--- a/resume/index.html
+++ b/resume/index.html
@@ -136,24 +136,23 @@
         💰 Help raise funding with
         <a href="https://bit.ly/3oibWj5">Ardian</a>
         in 2018<br />
-        💰 Help close deals when tech & automation involved with a prospect<br />
-        👨‍🔧 Audit and integrate VR tech team
+        👨‍🔧 Audit and integrate VR team
         <a href="https://bit.ly/3ElxfWl">after the buyout</a>, during the covid
         period 😱<br />
+        💰 Help close deals when tech & automation involved with a prospect<br />
         💪 <a href="https://github.com/iwonderanddev/jobladder">Build</a>,
         <a href="https://github.com/iwonderanddev/tech-challenges">hire</a> &
-        manage a remote tech team of 35+ people based in 🇫🇷 🇷🇴 🇺🇸 🇸🇬<br />
-        👌 Quality as core value: code review, unit / integration / e2e testing,
-        robust CI, "one button deploy" mindset<br />
-        👨‍💻 Tech team turnover < 6% = autonomous + quality + sustainable rhythm +
-        continuous improvement + remote<br />
+        manage a remote team of 35+ people based in 🇫🇷 🇷🇴 🇺🇸 🇸🇬<br />
+        👌 Quality as core value: code review, unit/integration/e2e testing,
+        robust CI, automation: "one button deploy" mindset<br />
+        👨‍💻 Tech team turnover < 6% = autonomous + quality + sustainable rhythm + remote + training/mentoring<br />
         👨‍🏫 Mentor the
         <a
           href="https://github.com/iwonderanddev/jobladder#level-3-lead-developer"
           >Lead developers</a
         >
-        to guide their own squads<br />
-        🤓 Never stopped coding or design products with the team, focus on React
+        to help them guide their own squads<br />
+        🤓 Never stopped coding or design products with the team => focus on React
         Native & TypeScript for the last 3 years<br /><br />
 
         <strong>Stack</strong><br />
@@ -263,10 +262,10 @@
       <h2>Interest</h2>
       <div>
         <br />
-        👦 Spending time with my son<br />
-        🧐 Tech watch on a daily basis, my RSS feed reader & Twitter mostly<br />
-        🏃 Running and playing tennis on a weekly basis<br />
-        👨‍🌾 Gardening my piece of land<br />
+        👦 Spending time with 👨‍👩‍👦 + 😺<br />
+        🧐 Tech watch on a daily basis (RSS feeds & Twitter mostly)<br />
+        🏃 Running and 🎾 playing tennis on a weekly basis<br />
+        👨‍🌾 Gardening<br />
         📚 <a href="https://fabienfuret.net/books/">Reading</a>, mainly history
         and essay books <br /><br /><br /><br />
       </div>
