feat(book): add Dans la tête d'un chat

--- a/books/index.html
+++ b/books/index.html
@@ -23,19 +23,36 @@
     <script type="text/javascript">
       var books = [
         {
-          year: 2021,
+          year: 2022,
           books: [
             {
+              title: "Dans la tête d'un chat",
+              subtitle: '',
+              author: 'Jessica Serra',
+              pages: 296,
+              year: 2020,
+              image: 'cover/Dans-la-tete-d-un-chat.jpeg',
+              tag: 'ecologie',
+              rating: 'en cours de lecture',
+              link: 'https://www.decitre.fr/ebooks/dans-la-tete-d-un-chat-9782379311727_9782379311727_1.html',
+            },
+            {
               title: 'Effondrement',
-              subtitle: "Comment les sociétés décident de leur disparition ou de leur survie",
+              subtitle:
+                'Comment les sociétés décident de leur disparition ou de leur survie',
               author: 'Jared Diamond',
               pages: 656,
               year: 2006,
               image: 'cover/effondrement.jpg',
               tag: 'histoire',
-              rating: 'en cours de lecture',
+              rating: '📚📚📚📚',
               link: 'http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folio-essais/Effondrement',
             },
+          ],
+        },
+        {
+          year: 2021,
+          books: [
             {
               title: 'Le plan Marshall',
               subtitle: "A l'aube de la guerre froide",
