feat: add La Guerre hors limites

--- a/books/index.html
+++ b/books/index.html
@@ -25,7 +25,17 @@
         {
           year: 2022,
           books: [
-            {
+          {
+              title: "La Guerre hors limites",
+              subtitle: '',
+              author: 'Liang Qiao & Xiangsui Wang',
+              pages: 310,
+              year: 2006,
+              image: 'cover/la-gueure-hors-limite.jpeg',
+              tag: 'essai',
+              rating: 'en cours de lecture',
+              link: 'https://www.decitre.fr/livres/la-guerre-hors-limites-9782743615178.html',
+            },{
               title: "Dans la tête d'un chat",
               subtitle: '',
               author: 'Jessica Serra',
@@ -33,7 +43,7 @@
               year: 2020,
               image: 'cover/Dans-la-tete-d-un-chat.jpeg',
               tag: 'ecologie',
-              rating: 'en cours de lecture',
+              rating: '📚📚📚📚',
               link: 'https://www.decitre.fr/ebooks/dans-la-tete-d-un-chat-9782379311727_9782379311727_1.html',
             },
             {
