feat: add the manager's path

--- a/books/index.html
+++ b/books/index.html
@@ -26,23 +26,34 @@
           year: 2022,
           books: [
           {
-              title: "La Guerre hors limites",
+              title: 'The Manager\'s Path',
+              subtitle: 'A guide for tech leader navigating growth & change',
+              author: 'Camille Fournier',
+              pages: 244,
+              year: 2017,
+              image: 'cover/the-managers-path.jpg',
+              tag: 'tech',
+              rating: 'en cours de lecture',
+              link: 'https://www.oreilly.com/library/view/the-managers-path/9781491973882/',
+            },{
+              title: 'La Guerre hors limites',
               subtitle: '',
               author: 'Liang Qiao & Xiangsui Wang',
               pages: 310,
               year: 2006,
               image: 'cover/la-gueure-hors-limite.jpeg',
               tag: 'essai',
-              rating: 'en cours de lecture',
+              rating: '📚📚',
               link: 'https://www.decitre.fr/livres/la-guerre-hors-limites-9782743615178.html',
-            },{
+            },
+            {
               title: "Dans la tête d'un chat",
               subtitle: '',
               author: 'Jessica Serra',
               pages: 296,
               year: 2020,
               image: 'cover/Dans-la-tete-d-un-chat.jpeg',
-              tag: 'ecologie',
+              tag: 'écologie',
               rating: '📚📚📚📚',
               link: 'https://www.decitre.fr/ebooks/dans-la-tete-d-un-chat-9782379311727_9782379311727_1.html',
             },
@@ -148,7 +159,7 @@
               pages: 129,
               year: 2012,
               image: 'cover/la-grande-amnesie.jpeg',
-              tag: 'ecologie',
+              tag: 'écologie',
               rating: '📚📚📚📚',
               link: 'https://www.delachauxetniestle.com/livre/la-grande-amnesie-ecologique-3',
             },
@@ -182,7 +193,7 @@
               pages: 142,
               year: 2018,
               image: 'cover/urine-au-jardin.jpeg',
-              tag: 'ecologie',
+              tag: 'écologie',
               rating: '📚📚📚',
               link: 'https://www.terran.fr/urine-or-liquide-jardin-de-looze-livre-editions-terran.html',
             },
@@ -237,7 +248,7 @@
               pages: 384,
               year: 2019,
               image: 'cover/le-bonheur-etait-pour-demain.jpg',
-              tag: 'ecologie',
+              tag: 'écologie',
               rating: '📚📚📚📚',
               link: 'https://www.seuil.com/ouvrage/le-bonheur-etait-pour-demain-philippe-bihouix/9782021388619',
             },
@@ -310,7 +321,7 @@
               pages: 179,
               year: 2018,
               image: 'cover/horloge-nature.jpg',
-              tag: 'ecologie',
+              tag: 'écologie',
               rating: '📚📚📚',
               link: 'https://www.decitre.fr/livres/l-horloge-de-la-nature-9788893194211.html',
             },
