feat: update with more precise information

--- a/resume/index.html
+++ b/resume/index.html
@@ -14,7 +14,7 @@
     />
     <meta
       property="og:image"
-      content="https://fabienfuret.net/resume/me.jpeg"
+      content="https://fabienfuret.net/resume/fab.jpeg"
     />
     <meta property="og:url" content="https://fabienfuret.net/resume/" />
     <link
@@ -78,91 +78,127 @@
         Remote worker 10 years+ 🏡💻 <br />
         <a href="mailto:fabien.furet@gmail.com">fabien.furet@gmail.com</a> //
         +33687321068<br />
-        <a href="https://fabienfuret.net">Website</a> -
+        <!-- <a href="https://fabienfuret.net">Website</a> - -->
         <a href="https://github.com/RETFU">Github</a> -
-        <a href="https://twitter.com/RETFU">Twitter</a>
+        <a href="https://twitter.com/RETFU">Twitter</a> (DM open)
+      </div>
+      <h2>What I'm looking for</h2>
+      <div>
+        <br />
+        - Full remote position<br />
+        - Individual Contributor at least 50% of my time, more is better <br />
+        - Manage/mentor a team or animate/organize a guild/chapter <br />
+        - More a ScaleUp than a startup early stage<br />
+        - Idealy frontend on mobile with React Native ecosystem<br />
+        - Salary 90K€ - 120K€ depending of the role<br />
+        <br />
+        Depending of the size/organization of the company, something like:<br />
+        - Senior Engineer<br />
+        - Lead Engineer<br />
+        - Engineer Manager<br />
+        - Staff Engineer<br />
+        - ...
       </div>
       <h2>Skills</h2>
       <div>
         <br />
         🕵️ Problem solver, takes initiative to identify and solve important
         problems <br />
-        🤝 Business oriented, I can bridge with stakeholder, sales, clients...
+        🤓 Backend / Frontend agnostic <br />
+        🤝 Business oriented, I can bridge with stakeholder, sales, clients... &
+        the tech team
         <br />
         😸 Require minimal direction/oversight <br />
-        👊 Very good communication, positive approach, working well within a
-        team <br />
+        👊 Very good communication, positive approach, team work<br />
         🇬🇧 Fluent in English <br />
         <br />
-        💻 Tech <br />
-        - Backend / Frontend agnostic <br />
-        - React & ReactNative enthusiast <br />
-        - Firebase platform enthusiast <br />
-        - LAMP stack veteran <br />
-        - TypeScript enthusiast <br />
-        - Node.js enthusiast <br />
-        - Python compatible <br />
-        - Industry standards: test, code review, continuous integration etc...
+        👨‍🔧 Practice <br />
+        - Industry standards: test, code review, continuous integration
+        etc...<br />
+        - Manage by goals, mostly via OKR with a product mindset: discovery,
+        client-centricity, why, outcomes, effectiveness & cross-functionnal
+        teams
+        <br /><br />
+        👨‍💻 Tech <br />
+        - React & ReactNative ecosystem<br />
+        - GCP / Firebase platform <br />
+        - TypeScript / Node.js <br />
+        - <a href="https://phptherightway.com/">LAMP stack</a> veteran <br />
         <br />
+        👨‍🎓 To be improved <br />
+        - Docker: ok on CI side, but not yet running it in production<br />
+        - Serverless: I know GCP Cloud Function but I have not yet design a full
+        serverless system<br />
+        - IA & data science<br />
         <br />
-
-        👨‍🎓 Area of improvements <br />
-        - IA & data science <br />
-        - Docker <br />
-        - Serverless <br />
-        - Python <br />
+        👴 Old<br />
+        - ActionScript 2 & 3 <br />
+        - Flash media server (realtime server)
       </div>
       <h2>Career</h2>
       <div>
         <h3>IWD</h3>
         <h4>CTO & Board member (2006-2021)</h4>
-
         <a href="https://bit.ly/3Ii44pK">IWD</a> provides a SaaS platform that
         allows <a href="https://bit.ly/3Ifa3M3">clients</a> to manage their
         merchandising and in-store execution. <br /><br />
-
-        “I wanted to start a project from scratch. I got the chance to meet
-        Nicolas & Gabriel in a garage, true story, where they showed me the POC
-        they already sold to Shiseido. They were looking for their future CTO to
-        build it as a SaaS. I had no experience as CTO but I guess my arguments
-        worked and that was the beginning of a long journey! Everybody asks me
-        why I stay that long? Well the company was changing every 3-4 years in
-        terms of size, products, practices… it was like a new one and I was
-        growing with it”
+        “I met Nicolas & Gabriel in a garage, true story, where they showed me
+        the POC they already sold to Shiseido. They were looking for their
+        future CTO to build it as a SaaS business. I had no experience as CTO but I guess
+        my arguments worked and that was the beginning of a long journey!
+        Everybody asks me why I stay that long? The company was changing every
+        3-4 years in terms of size, products, practices… it was like a new one
+        and I was growing with it”
         <br /><br />
         <strong>Achievement</strong><br />
-        🚀 Help scale the company from 3 to 120 people, 3 to thousands users, 0
-        to 10M$+ revenue, 0 to 7 offices across the globe<br />
+        🚀 Help scale the <a href="https://www.iwd.io/about-us">company</a> from
+        3 to 120 people, 3 to 30000+ users, 0 to 10M$+ revenue, 0 to 5 offices
+        across the globe<br />
         💰 Help raise funding with
-        <a href="https://bit.ly/3oibWj5">Ardian</a>
-        in 2018<br />
+        <a href="https://bit.ly/3oibWj5">Ardian</a><br />
         👨‍🔧 Audit and integrate VR team
         <a href="https://bit.ly/3ElxfWl">after the buyout</a>, during the covid
         period 😱<br />
         💰 Help close deals when tech & automation involved with a prospect<br />
-        💪 <a href="https://github.com/iwonderanddev/jobladder">Build</a>,
-        <a href="https://github.com/iwonderanddev/tech-challenges">hire</a> &
+        💪
+        <a
+          href="https://github.com/iwonderanddev/jobladder/tree/new-job-ladder#readme"
+          >Build</a
+        >, <a href="https://github.com/iwonderanddev/tech-challenges">hire</a> &
         manage a remote team of 35+ people based in 🇫🇷 🇷🇴 🇺🇸 🇸🇬<br />
         👌 Quality as core value: code review, unit/integration/e2e testing,
         robust CI, automation: "one button deploy" mindset<br />
-        👨‍💻 Tech team turnover < 6% = autonomous + quality + sustainable rhythm + remote + training/mentoring<br />
+        👨‍💻 Tech team turnover < 6% = autonomous + quality + sustainable rhythm +
+        remote + training/mentoring<br />
         👨‍🏫 Mentor the
         <a
-          href="https://github.com/iwonderanddev/jobladder#level-3-lead-developer"
-          >Lead developers</a
+          href="https://github.com/iwonderanddev/jobladder/tree/new-job-ladder#lead-engineer"
+          >Lead Engineer</a
         >
         to help them guide their own squads<br />
-        🤓 Never stopped coding or design products with the team => focus on React
-        Native & TypeScript for the last 3 years<br /><br />
+        🤓 Still Individual Contributor, code/design/review on a weekly basis<br /><br />
+        <strong>My tech focus for the last years</strong><br />
+        On top on my CTO role, I was the
+        <a
+          href="https://github.com/iwonderanddev/jobladder/tree/new-job-ladder#lead-engineer"
+          >Lead Engineer</a
+        >
+        of the the 📱Mobile team.<br />
+        I was an Individual Contributor in this team like others Lead Engineers
+        in others teams.
+        <br />
+        Before I was contributing to the Web part and the API.<br /><br />
 
         <strong>Stack</strong><br />
         - Web: TypeScript + React (Cypress, Jest, React Testing Library, React
         Query)<br />
         - Mobile: TypeScript + React Native (Detox, Jest, React Testing Library,
-        Redux) - Firebase platform: Messaging, Firestore, Cloud Function..<br />
-        - 2D editor: TypeScript + React + custom render engine via Canvas<br />
+        Redux) - Firebase platform: Messaging, Firestore, Cloud Function...<br />
+        - 2D editor: TypeScript + React (Jest, Testcafe) + custom rendering
+        engine via Canvas<br />
         - 3D editor: C# - Unity SDK<br />
-        - Backend: REST API with PHP (Symfony) + MYSQL + REDIS + ELASTICSEARCH
+        - Backend: REST API with PHP (Symfony, PHPUnit, PHPStan) + MYSQL + REDIS
+        + ELASTICSEARCH
         <br />
         - Infrastructure: AWS via Ansible/Terraform<br />
         - CDN: AWS CloudFront <br />
@@ -173,7 +209,6 @@
       <div>
         <h3>Ki Communication</h3>
         <h4>Lead developer (2003-2006)</h4>
-
         Ki communication was a web agency with a focus on culture & ads.<br />
         We were the agency of all Columbia Tristar movies websites: Spiderman,
         Men in Black, PeterPan… For blockbuster we build casual games in Flash
@@ -182,7 +217,6 @@
         that was generating and serving ad banners to brokers like
         <a href="https://en.wikipedia.org/wiki/DoubleClick">Double Click</a
         >.<br /><br />
-
         <strong>Achievement</strong><br />
         🚀 Grow myself as a team leader in a very intensive and deadline driven
         environment<br />
