feat: add Looking for a new opportunity

--- a/resume/index.html
+++ b/resume/index.html
@@ -75,7 +75,7 @@
       <div>
         39 years old, 👨‍👩‍👦 + 😺 <br />
         Paris area, France 🇫🇷 <br />
-        Remote worker 10 years+ 🏡💻 <br />
+        Remote worker 10 years+ 🏡<br />
         <a href="mailto:fabien.furet@gmail.com">fabien.furet@gmail.com</a> //
         +33687321068<br />
         <!-- <a href="https://fabienfuret.net">Website</a> - -->
@@ -85,12 +85,12 @@
       <h2>What I'm looking for</h2>
       <div>
         <br />
-        - Full remote position<br />
-        - Individual Contributor at least 50% of my time, more is better <br />
-        - Manage/mentor a team or animate/organize a guild/chapter <br />
-        - More a ScaleUp than a startup early stage<br />
-        - Idealy frontend on mobile with React Native ecosystem<br />
-        - Salary 90K€ - 120K€ depending of the role<br />
+        🏡 Full remote position<br />
+        👨‍💻 Individual Contributor at least 50% of my time, more is better <br />
+        👨‍🦰 Manage/mentor a team or animate/organize a guild/chapter <br />
+        ✨ More a ScaleUp than a startup early stage<br />
+        📱 Idealy frontend on mobile with React Native ecosystem<br />
+        💰 Salary 90K€ - 120K€ depending of the role<br />
         <br />
         Depending of the size/organization of the company, something like:<br />
         - Senior Engineer<br />
@@ -144,11 +144,11 @@
         merchandising and in-store execution. <br /><br />
         “I met Nicolas & Gabriel in a garage, true story, where they showed me
         the POC they already sold to Shiseido. They were looking for their
-        future CTO to build it as a SaaS business. I had no experience as CTO but I guess
-        my arguments worked and that was the beginning of a long journey!
-        Everybody asks me why I stay that long? The company was changing every
-        3-4 years in terms of size, products, practices… it was like a new one
-        and I was growing with it”
+        future CTO to build it as a SaaS business. I had no experience as CTO
+        but I guess my arguments worked and that was the beginning of a long
+        journey! Everybody asks me why I stay that long? The company was
+        changing every 3-4 years in terms of size, products, practices… it was
+        like a new one and I was growing with it”
         <br /><br />
         <strong>Achievement</strong><br />
         🚀 Help scale the <a href="https://www.iwd.io/about-us">company</a> from
