--- a/index.html
+++ b/index.html
@@ -22,59 +22,71 @@
         <span itemprop="name">Fabien Furet</span>
         <span class="aka">aka RETFU</span>
       </h1>
+      <h2
+        style="
+          background-color: #fdb00a;
+          border-radius: 20px;
+          font-size: 1.5em;
+          padding: 20px;
+          text-align: center;
+          margin-bottom: 50px;
+          color:aliceblue;
+        "
+      >
+        Looking for a new opportunity<br />
+        DM me on <a href="https://twitter.com/RETFU">Twitter</a>
+      </h2>
       <h2>Skills 🚀</h2>
       <p>
         <span class="tag tag-level-4">leadership</span>
-        <span class="tag tag-level-3">redis</span>
-        <span class="tag tag-level-5">json schema</span>
-        <span class="tag tag-level-5">maintainability</span>
-        <span class="tag tag-level-3">android studio</span>
+        <span class="tag tag-level-3">cocoapods</span>
+        <span class="tag tag-level-3">xcode</span>
+        <span class="tag tag-level-5">jest</span>
+        <span class="tag tag-level-5">css</span>
+        <span class="tag tag-level-5">rest api</span>
+        <span class="tag tag-level-5">javascript</span>
+        <span class="tag tag-level-5">as3</span>
+        <span class="tag tag-level-5">react native</span>
+        <span class="tag tag-level-1">python</span>
+        <span class="tag tag-level-4">react testing library</span>
+        <span class="tag tag-level-1">serverless</span>
+        <span class="tag tag-level-2">service worker</span>
+        <span class="tag tag-level-4">consistency</span>
+        <span class="tag tag-level-4">saas</span>
+        <span class="tag tag-level-5">solid</span>
+        <span class="tag tag-level-2">docker</span>
         <span class="tag tag-level-4">apache</span>
+        <span class="tag tag-level-5">mentoring</span>
+        <span class="tag tag-level-4">mysql</span>
+        <span class="tag tag-level-3">android studio</span>
+        <span class="tag tag-level-5">loose coupling</span>
+        <span class="tag tag-level-5">json schema</span>
+        <span class="tag tag-level-5">http</span>
+        <span class="tag tag-level-5">html5</span>
+        <span class="tag tag-level-4">typescript</span>
+        <span class="tag tag-level-3">nginx</span>
+        <span class="tag tag-level-5">maintainability</span>
+        <span class="tag tag-level-3">redis</span>
+        <span class="tag tag-level-5">dependency injection</span>
+        <span class="tag tag-level-4">management</span>
+        <span class="tag tag-level-5">react</span>
+        <span class="tag tag-level-5">detox</span>
+        <span class="tag tag-level-5">php</span>
+        <span class="tag tag-level-4">firebase platform</span>
+        <span class="tag tag-level-3">webpack</span>
+        <span class="tag tag-level-3">gradle</span>
+        <span class="tag tag-level-5">unit test</span>
+        <span class="tag tag-level-4">raml</span>
+        <span class="tag tag-level-4">openapi</span>
         <span class="tag tag-level-5">hiring</span>
         <span class="tag tag-level-4">node</span>
-        <span class="tag tag-level-3">webpack</span>
-        <span class="tag tag-level-5">react</span>
-        <span class="tag tag-level-2">docker</span>
-        <span class="tag tag-level-4">consistency</span>
-        <span class="tag tag-level-5">react native</span>
-        <span class="tag tag-level-5">as3</span>
-        <span class="tag tag-level-4">saas</span>
-        <span class="tag tag-level-4">openapi</span>
-        <span class="tag tag-level-5">html5</span>
-        <span class="tag tag-level-4">react testing library</span>
-        <span class="tag tag-level-3">nginx</span>
-        <span class="tag tag-level-5">unit test</span>
-        <span class="tag tag-level-1">serverless</span>
-        <span class="tag tag-level-5">rest api</span>
-        <span class="tag tag-level-3">cocoapods</span>
-        <span class="tag tag-level-4">saml sso</span>
-        <span class="tag tag-level-5">dependency injection</span>
-        <span class="tag tag-level-4">raml</span>
-        <span class="tag tag-level-5">detox</span>
-        <span class="tag tag-level-3">xcode</span>
-        <span class="tag tag-level-5">solid</span>
         <span class="tag tag-level-5">interface</span>
-        <span class="tag tag-level-5">jest</span>
-        <span class="tag tag-level-5">redux</span>
+        <span class="tag tag-level-4">saml sso</span>
         <span class="tag tag-level-5">contract</span>
-        <span class="tag tag-level-5">css</span>
-        <span class="tag tag-level-3">gradle</span>
-        <span class="tag tag-level-4">mysql</span>
-        <span class="tag tag-level-4">typescript</span>
-        <span class="tag tag-level-2">python</span>
-        <span class="tag tag-level-5">http</span>
-        <span class="tag tag-level-5">loose coupling</span>
+        <span class="tag tag-level-5">redux</span>
         <span class="tag tag-level-5">continuous integration</span>
-        <span class="tag tag-level-5">code review</span>
-        <span class="tag tag-level-4">management</span>
-        <span class="tag tag-level-5">mentoring</span>
-        <span class="tag tag-level-4">firebase platform</span>
-        <span class="tag tag-level-4">composer</span>
-        <span class="tag tag-level-5">continuous dxelivery</span>
-        <span class="tag tag-level-5">php</span>
-        <span class="tag tag-level-5">javascript</span>
         <span class="tag tag-level-4">gitlab ci</span>
-        <span class="tag tag-level-2">service worker</span>
+        <span class="tag tag-level-5">code review</span>
       </p>
       <br />
       <h2>Talk</h2>
